# iotpatch

./: README.md  pyproject.toml  setup.py
examples/: scan_demo.py
iotpatch/: __init__.py  audit.py  crypto.py  net.py  ota.py
tests/: test_audit.py
